assets/styles.css
@import "tailwindcss";
@plugin "daisyui"{
   themes: light --default, dark --prefersdark;
 }

.fresh-gradient {
  background-color: color-mix(in oklch, var(--color-success) 50%, var(--color-base-100));
  background-image: linear-gradient(
    to right bottom,
    color-mix(in oklch, var(--color-primary) 30%, var(--color-base-100)),
    color-mix(in oklch, var(--color-success) 30%, var(--color-base-100)),
    color-mix(in oklch, var(--color-warning) 30%, var(--color-base-100))
  );
}

